# conversao-distancia

./: Dockerfile  Dockerfile.v1  Makefile  app.py  pyproject.toml
k8s/: deployment.yaml
templates/: index.html
