[project]
name = "conversao-distancia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.1",
    "flask>=2.0.1",
    "gunicorn>=20.1.0",
    "itsdangerous>=2.0.1",
    "jinja2>=3.0.1",
    "markupsafe>=2.0.1",
    "werkzeug>=2.0.1",
]
